同步触发器示例

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/11.create-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/11.create-trigger-oracle.md
@@ -66,14 +66,14 @@ TRIGGER plsql_trigger_source
 * `trigger_ordering_clause` 的语法如下：
   
   ```sql
-  { FOLLOWS | PRECEDES } [ schmema.] trigger [ , [ schmema.] trigger ]... 
+  { FOLLOWS | PRECEDES } [ schmema.] trigger_name [ , [ schmema.] trigger_name ]... 
   ```  
 
 * `dml_event_clause` 的语法如下：
 
   ```sql
   { DELETE | INSERT | UPDATE [ OF column [, column ]... ] }
-  [ OR { DELETE | INSERT | UPDATE [ OF column [, column]... ] }...
+  [ OR { DELETE | INSERT | UPDATE [ OF column [, column]... ] }...]
   ON [ schema.] { table | view }
   ```
 
@@ -137,9 +137,9 @@ TRIGGER plsql_trigger_source
 示例 
 -----------------------
 
-创建 DML 触发器 `del_new_region`。
+示例 1：创建 DML 触发器 `del_new_region`。
 
-```sql
+```shell
 CREATE OR REPLACE TRIGGER del_new_region
       BEFORE DELETE ON regions 
       FOR EACH ROW
@@ -149,4 +149,34 @@ CREATE OR REPLACE TRIGGER del_new_region
            VALUES( :old.region_id, :old.region_name );
    END;
  /
+```
+
+示例 2：创建触发器 `tri2_t` 在触发器 `tri1_t` 之后执行。
+
+```shell
+CREATE SEQUENCE seq_tri INCREMENT BY 1 START WITH 1 NOMAXVALUE MINVALUE 0 NOCYCLE NOCACHE;
+CREATE TABLE t(c1 INT, c2 INT);
+CREATE TABLE msg (c1 INT PRIMARY KEY, c2 VARCHAR(100));
+CREATE OR REPLACE TRIGGER tri1_t BEFORE INSERT ON t FOR EACH ROW 
+BEGIN
+  INSERT INTO msg VALUES (seq_tri.NEXTVAL, 'BEFORE INSERT tri1_t');
+END;
+/
+
+CREATE OR REPLACE TRIGGER tri2_t BEFORE INSERT ON t FOR EACH ROW FOLLOWS tri1_t
+BEGIN
+  INSERT INTO msg VALUES (seq_tri.nextval, 'BEFORE INSERT tri2_t');
+END;
+/
+
+INSERT INTO t VALUES (1, 1);
+
+obclient> SELECT * FROM msg;
++----+----------------------+
+| C1 | C2                   |
++----+----------------------+
+|  1 | BEFORE INSERT tri1_t |
+|  2 | BEFORE INSERT tri2_t |
++----+----------------------+
+2 rows in set
 ```
