--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/8.trigger-oracle/2.create-a-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/8.trigger-oracle/2.create-a-trigger-oracle.md
@@ -38,7 +38,7 @@ ON [schema.] table_name
 [REFERENCING {OLD [AS] old | NEW [AS] new| PARENT as parent}]
 FOR EACH ROW
 [WHEN condition]
-[FOLLOWS | PRECEDES]
+[FOLLOWS | PRECEDES] other_trigger_name
 trigger_body;
 ```
 
