--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/2.storage-object-mysql/5.pl-trigger-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/2.storage-object-mysql/5.pl-trigger-mysql.md
@@ -38,11 +38,14 @@ CREATE
     TRIGGER trigger_name
     trigger_time trigger_event
     ON table_name FOR EACH ROW
+    [trigger_order]
     trigger_body
 
 trigger_time: { BEFORE | AFTER }
 
 trigger_event: { INSERT | UPDATE | DELETE }
+
+trigger_order: { FOLLOWS | PRECEDES } other_trigger_name
 ```
 
 语法说明如下：
@@ -69,7 +72,7 @@ OceanBase 数据库中也定义了 `NEW.columnName` 和 `OLD.columnName`：
 
 
 
-示例：创建一个触发器 `test_trg`，并将其与表 `test` 相关联，以激活 `INSERT` 操作，且触发器充当累加器，将插入到表的列的值求和。
+示例 1：创建一个触发器 `test_trg`，并将其与表 `test` 相关联，以激活 `INSERT` 操作，且触发器充当累加器，将插入到表的列的值求和。
 
 ```sql
 obclient> CREATE TABLE test (user_id INT, user_num DECIMAL(10,2));
@@ -78,6 +81,46 @@ Query OK, 0 rows affected
 obclient> CREATE TRIGGER test_trg BEFORE INSERT ON test
        FOR EACH ROW SET @sum = @sum + NEW.user_num;
 Query OK, 0 rows affected
+```
+
+示例 2：创建触发器 `tri2_t` 和 `trg3_t` 在触发器 `tri1_t` 之后执行，触发器 `trg4_t` 在触发器 `tri1_t` 之前执行。
+
+```shell
+CREATE TABLE t(c1 INT);
+CREATE TABLE msg(c1 INT AUTO_INCREMENT PRIMARY KEY, c2 VARCHAR(100));
+CREATE TRIGGER trg1_t BEFORE INSERT ON t FOR EACH ROW
+BEGIN
+  INSERT INTO msg(c2) VALUES ('BEFORE INSERT trg1_t');
+END;
+/
+CREATE TRIGGER trg2_t BEFORE INSERT ON t FOR EACH ROW FOLLOWS trg1_t
+BEGIN
+  INSERT INTO msg(c2) VALUES ('BEFORE INSERT trg2_t');
+END;
+/
+CREATE TRIGGER trg3_t BEFORE INSERT ON t FOR EACH ROW FOLLOWS trg1_t
+BEGIN
+  INSERT INTO msg(c2) VALUES ('BEFORE INSERT trg3_t');
+END;
+/
+
+CREATE TRIGGER trg4_t BEFORE INSERT ON t FOR EACH ROW PRECEDES trg1_t
+BEGIN
+  INSERT INTO msg(c2) VALUES ('BEFORE INSERT trg4_t');
+END;
+/
+INSERT INTO t VALUES (1);
+
+obclient> SELECT * FROM msg;
++----+----------------------+
+| c1 | c2                   |
++----+----------------------+
+|  1 | BEFORE INSERT trg4_t |
+|  2 | BEFORE INSERT trg1_t |
+|  3 | BEFORE INSERT trg3_t |
+|  4 | BEFORE INSERT trg2_t |
++----+----------------------+
+4 rows in set
 ```
 
 此外，如果需要定义的触发器有多条执行语句时，可以使用 `BEGIN ... END` 语句，分别表示整个代码块的开始和结束。
