--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
@@ -41,7 +41,7 @@ zone_option:
     <p>当前版本不支持修改 <code>zone_type</code>，请在添加 Zone 时指定所需的 <code>zone_type</code>。</p>
   </main>
 
-* 通过 `ALTER SYSTEM ADD ZONE zone_name;` 语句增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在 Zone 上添加 OBServer，分配资源，并增加副本信息。
+* 通过 `ALTER SYSTEM ADD ZONE zone_name;` 语句增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在 Zone 上添加 OBServer 节点，分配资源，并增加副本信息。
 
   通过增加 Zone 来完成集群扩容的相关操作请参见 [在集群中增加 Zone](../../../7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md)。
 
