--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md
@@ -56,6 +56,6 @@ OCP 提供了白屏化重启节点的功能。
 
    当该任务状态为 **完成** ，且集群 **总览** 页的 **OBServer 列表** 中该节点的状态为 **运行中** 时，则重启成功。
 
-## 相关阅读
+## 相关文档
 
-[停止或启动 OBServer](../5.manage-observer/3.stop-or-start-observer.md)
+[停止或启动节点](../5.manage-observer/3.stop-or-start-observer.md)
