--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/3.modifies-the-resource-pool.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/3.modifies-the-resource-pool.md
@@ -1,83 +1,75 @@
 # 修改资源池
 
-修改资源池是实现租户扩容或缩容的另一种方式。例如，在每个 Zone 中增加或减少节点数量，可以通过修改参数 `UNIT_NUM` 来实现。
+修改资源池属性，即是调整资源池配置的 `UNIT`、`UNIT_NUM`、`ZONE_LIST` 等参数信息。
 
-## 通过 SQL 语句修改资源池
+## 使用限制
 
-修改资源池语句的语法如下：
+OceanBase 数据库 V4.0 版本后，系统不再支持租户多个资源池的 Unit 数目异构。当资源池分配给租户后，无法单独调整某个资源池的 `UNIT_NUM`，只能同时调整该租户下所有资源池的 `UNIT_NUM`，且当前仅支持调大租户下所有资源池的 `UNIT_NUM`。
 
-```sql
-ALTER RESOURCE POOL pool_name 
-UNIT [=] unit_name, 
-UNIT_NUM [=] unit_num [DELETE UNIT = (unit_id_list)], 
-ZONE_LIST [=] ('zone'[, 'zone' ...]);
-```
+## 操作步骤
 
-语句使用说明：
-
-* 该语句仅支持由 `sys` 租户的管理员执行。
-
-* 修改资源池的命令每次仅支持修改一个参数。
-
-* `UNIT_NUM` 表示指定修改每个 Zone 下的资源单元个数，取值需要小于等于对应 Zone 中的 OBServer 节点的个数。
-
-  减小 `UNIT_NUM` 时，使用 `DELETE UNIT` 可以明确指定本次缩容即将删除的 Unit。如果不指定 `DELETE UNIT`，则系统将自动选择 Unit 进行删除。
-
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>使用 <code>DELETE UNIT</code> 明确指定待删除的 <code>unit_id</code> 时，还需要满足以下条件：</p>
-    <ul>
-    <li>
-    <p>待删除的 <code>unit_id</code> 列表中，每个 Zone 内删除的 Unit 的数量必须相等，目前认为删除列表中各 Zone 的 Unit 数量不相同的缩容操作属于非法操作。</p>
-    </li>
-    <li>
-    <p>待删除的 <code>unit_id</code> 列表中，每个 Zone 内删除的 Unit 的数量和 <code>UNIT_NUM</code> 的数量需要匹配。</p>
-    <p>指定待删除的 <code>unit_id</code> 时， <code>unit_id</code> 可通过查询视图 <code>GV$OB_UNITS</code> 获取。</p>
-    </li>
-    </ul>
-  </main>
+1. 使用 `root` 用户登录集群的 `sys` 租户。
   
-* `ZONE_LIST` 表示指定资源池的使用范围。
+2. 执行以下语句，修改资源池。
 
-假设当前环境中存在如下所示的资源单元和资源池。
+   语句如下：
 
-```sql
-obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6,MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '2G';
+   ```sql
+   ALTER RESOURCE POOL pool_name 
+   UNIT [=] unit_name, 
+   UNIT_NUM [=] unit_num [DELETE UNIT = (unit_id_list)], 
+   ZONE_LIST [=] ('zone'[, 'zone' ...]);
+   ```
 
-obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('z1','z2','z3');
-```
+   语句使用说明：
 
-则修改资源池的示例如下：
+   * 修改资源池的命令每次仅支持修改一个参数。
 
-* 修改资源池 `pool1` 的资源单元，修改后，`unit2` 替代 `unit1` 属于资源池`pool1`。
+   * `UNIT_NUM` 表示指定修改每个 Zone 下的资源单元个数，取值需要小于等于对应 Zone 中的 OBServer 节点的个数。
 
-  ```sql
-  obclient> CREATE RESOURCE UNIT unit2 MAX_CPU 8, MIN_CPU=8, MEMORY_SIZE '40G';
-  
-  obclient> ALTER RESOURCE POOL pool1 unit='unit2';
-  ```
+     当资源池未分配给租户时，可以使用 `ALTER RESOURCE POOL` 语句单独调大或调小资源池的 `UNIT_NUM`；当资源池分配给租户后，只能使用 `ALTER RESOURCE TENANT` 语句同时调整租户下所有资源池的 `UNIT_NUM`。
 
-* 不指定 `unit_id`，将资源池 `pool1` 中每个 Zone 下的资源单元个数修改为 1 个。
+     资源池分配给租户后，调整租户下所有资源池的 `UNIT_NUM` 的语句如下：
 
-  ```sql
-  obclient>ALTER RESOURCE POOL pool1 UNIT_NUM = 1;
-  ```
+     ```sql
+     ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num; 
+     ```
 
-* 指定删除资源池 `pool1` 中 `unit_id` 为 `1001` 、`1003`、`1005` 的资源单元，使每个 Zone 下的资源单元个数为 1 个。
+   * `ZONE_LIST` 表示指定资源池的使用范围。
 
-  ```sql
-  obclient> ALTER RESOURCE POOL pool1 UNIT_NUM 1 DELETE UNIT = (1001, 1003,1005);
-  ```
+   假设当前环境中存在如下所示的资源单元和资源池。
 
-* 修改资源池 `pool1`， 使资源池 `pool1` 中 `ZONE_LIST` 的范围扩大到 `'z1','z2','z3','z4'`。
+   ```shell
+   obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6,MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '2G';
 
-  ```sql
-  obclient> ALTER RESOURCE POOL pool1 ZONE_LIST=('z1','z2','z3','z4');
-  ```
+   obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('z1','z2','z3');
+   ```
 
-* 每次只能修改资源池的一个参数，同时修改资源池的两个参数时，会报错。
+   修改资源池的示例如下：
 
-  ```sql
-  obclient> ALTER RESOURCE POOL pool1 unit='unit1', zone_list=('HANGZHOU_1');
-  ERROR 1235 (0A000): alter unit_num, resource_unit, zone_list in one cmd not supported
-  ```
+   * 修改资源池 `pool1` 的资源单元，修改后，`unit2` 替代 `unit1` 属于资源池`pool1`。
+
+     ```shell
+     obclient> CREATE RESOURCE UNIT unit2 MAX_CPU 8, MIN_CPU=8, MEMORY_SIZE '40G';
+     
+     obclient> ALTER RESOURCE POOL pool1 unit='unit2';
+     ```
+
+   * 资源池分配给租户后，将租户内所有资源池中每个 Zone 下的资源单元个数修改为 3 个。
+
+     ```shell
+     obclient> ALTER RESOURCE TENANT pool1 UNIT_NUM = 3;
+     ```
+
+   * 修改资源池 `pool1`， 使资源池 `pool1` 中 `ZONE_LIST` 的范围扩大到 `'z1','z2','z3','z4'`。
+
+     ```sql
+     obclient> ALTER RESOURCE POOL pool1 ZONE_LIST=('z1','z2','z3','z4');
+     ```
+
+   * 每次只能修改资源池的一个参数，同时修改资源池的两个参数时，系统会报错。
+
+     ```sql
+     obclient> ALTER RESOURCE POOL pool1 unit='unit1', zone_list=('HANGZHOU_1');
+     ERROR 1235 (0A000): alter unit_num, resource_unit, zone_list in one cmd not supported
+     ```
