--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/4.merge-resource-pools.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/4.merge-resource-pools.md
@@ -10,23 +10,27 @@
 
 * 被合并的资源池的资源配置必须是同一个。
 
-## 合并资源池
+## 操作步骤
 
-合并资源池的 SQL 语法如下：
+1. 使用 `root` 用户登录集群的 `sys` 租户。
+  
+2. 执行以下语句，合并资源池。
 
-```sql
-ALTER RESOURCE POOL MERGE  ('pool_name'[, 'pool_name' ...]) INTO ('merge_pool_name')
-```
+   语句如下：
 
-该语句仅支持由 `sys` 租户的管理员执行。
+   ```sql
+   ALTER RESOURCE POOL MERGE  ('pool_name'[, 'pool_name' ...]) INTO ('merge_pool_name')
+   ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>合并资源池时，不会影响资源池被租户使用，仅在 Root Service 的管理层看来是多个资源池合并为一个资源池，方便统一维护。</p>
-  </main>
+   其中，`pool_name` 为待合并的多个资源池的名称，`merge_pool_name` 为合并后资源池的名称。
 
-示例：
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>合并资源池时，不会影响资源池被租户使用，仅在 Root Service 的管理层看来是多个资源池合并为一个资源池，方便统一维护。</p>
+   </main>
 
-```sql
-obclient>ALTER RESOURCE POOL MERGE ('pool0','pool1','pool2') INTO ('pool3');
-```
+   示例：
+
+   ```shell
+   obclient>ALTER RESOURCE POOL MERGE ('pool0','pool1','pool2') INTO ('pool3');
+   ```
