--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md
@@ -6,23 +6,13 @@ OceanBase 数据库支持通过 SQL 语句删除不再使用的资源池。
 
 删除资源池前，请确认该资源池当前未被任何租户使用。如果资源池正在被租户使用，则需要将资源池从租户中移除后再删除资源池，从租户中移除资源池的相关操作请参见 [从租户中移除资源池](6.remove-a-resource-pool-from-a-tenant.md)。
 
-## 删除资源池
-
-删除资源池的语句如下：
-
-```sql
-obclient> DROP RESOURCE POOL pool_name;
-```
-
-该语句仅支持由 `sys` 租户的管理员执行。
-
-示例：
+## 操作步骤
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下命令，查看待删除的资源池 `resource_pool1` 是否被租户使用。
 
-   ```sql
+   ```shell
    obclient> SELECT tenant_id,name FROM oceanbase.DBA_OB_RESOURCE_POOLS WHERE name='resource_pool1';
    +-----------+----------------+
    | tenant_id |        name    |
@@ -36,7 +26,15 @@ obclient> DROP RESOURCE POOL pool_name;
 
 3. 执行以下命令，删除资源池。
 
+   语句如下：
+
    ```sql
+   DROP RESOURCE POOL pool_name;
+   ```
+
+   示例：
+
+   ```shell
    obclient> DROP RESOURCE POOL resource_pool1;
    Query OK, 0 rows affected
    ```
