--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-parameters/3.modify-tenant-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-parameters/3.modify-tenant-parameters.md
@@ -1,12 +1,8 @@
 # 修改租户参数
 
-您可以通过 SQL 语句修改租户参数。
+您可以通过 SQL 语句修改租户参数。租户参数即租户级配置项，系统租户（即 `sys` 租户）和普通租户都可以设置租户级配置项。系统租户可以设置本租户和其他租户的租户级配置项，普通租户只能设置本租户的租户级配置项。
 
-## 通过 SQL 语句修改租户参数
-
-租户参数即租户级配置项，系统租户（即 `sys` 租户）和普通租户都可以设置租户级配置项。系统租户可以设置本租户和其他租户的租户级配置项，普通租户只能设置本租户的租户级配置项。
-
-### MySQL 模式
+## MySQL 模式下修改租户参数
 
 MySQL 模式下，设置租户级配置项的语法如下：
 
@@ -63,7 +59,7 @@ ALTER SYSTEM [SET] parameter_name = expression [SCOPE = {MEMORY | SPFILE | BOTH}
   obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 ZONE='z1';
   ```
 
-### Oracle 模式
+## Oracle 模式下修改租户参数
 
 Oracle 模式下，设置租户级配置项的语法如下：
 
