--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
@@ -6,19 +6,19 @@
 
 ## 操作步骤
 
-`sys` 租户修改普通租户名称的 SQL 语句如下：
-
-```sql
-obclient> ALTER TENANT old_tenant_name RENAME GLOBAL_NAME TO new_tenant_name;
-```
-
-示例如下：
-
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-2. 将租户 `tenant1` 的租户名修改为 `tenant2`。
+2. 重命名普通租户。
+
+   语句如下：
 
    ```sql
+   ALTER TENANT old_tenant_name RENAME GLOBAL_NAME TO new_tenant_name;
+   ```
+
+   将租户 `tenant1` 的租户名修改为 `tenant2` 的示例如下：
+
+   ```shell
    obclient> ALTER TENANT tenant1 RENAME GLOBAL_NAME TO tenant2;
    ```
 
