--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
@@ -177,7 +177,7 @@ Oracle 模式的权限主要有以下两类：
 | 系统权限 | DEBUG CONNECT SESSION       | 调试连接会话的权限。        |
 | 系统权限 | DEBUG ANY PROCEDURE         | 调试任何程序的权限。        |
 
-## 相关阅读
+## 相关文档
 
 关于各租户下用户的更多信息，您可以阅读以下内容：
 
