--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md
@@ -2,7 +2,7 @@
 
 修改用户权限包括授予用户权限和撤销用户权限。
 
-## 通过 SQL 语句授予权限
+## 授予权限
 
 ### 前提条件
 
@@ -173,7 +173,7 @@ system_privilege:
 
 `GRANT` 语句的更多信息，请参见 [GRANT](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/7.grant-of-oracle-mode.md)。
 
-## 通过 SQL 语句撤销权限
+## 撤销权限
 
 ### 前提条件
 
