--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/8.delete-a-user-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/8.delete-a-user-of-mysql-mode.md
@@ -2,35 +2,37 @@
 
 您可以通过 `DROP USER` 语句删除不再使用的用户。
 
-## 通过 SQL 语句删除用户
+## 前提条件
 
-您可以通过 `DROP USER` 语句删除一个或多个 OceanBase 数据库用户。
+当前用户必须拥有全局的 `CREATE USER` 权限，才可以成功执行 `DROP USER`命令。您可以先查看当前用户是否拥有该权限，查看当前用户拥有的权限请参见 [查看用户权限](../3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您添加相应的权限，为用户添加权限的相关操作请参见 [修改用户权限](../3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
-SQL 语法如下：
+## 使用限制
 
-```sql
-DROP USER user_name [, user_name...];
-```
+不能对 `mysql.user` 表通过 `DELETE` 的方式进行权限管理。
 
-语句使用说明：
+## 操作步骤
 
-* 当前用户必须拥有全局的 `CREATE USER` 权限，才可以成功执行 `DROP USER`命令。
+1. 用户登录集群的 MySQL 租户。
 
-  您可以先查看当前用户是否拥有该权限，查看当前用户拥有的权限请参见 [查看用户权限](../3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您添加相应的权限，为用户添加权限的相关操作请参见 [修改用户权限](../3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+2. 执行以下语句，删除一个或多个用户。
 
-  查看
-  
-* 不能对 `mysql.user` 表通过 `DELETE` 的方式进行权限管理。
+   语句如下：
 
-* 成功删除用户后，该用户所创建的数据库对象不会被删除，但该用户的所有权限会一同被删除。
+   ```sql
+   DROP USER user_name [, user_name...];
+   ```
 
-* 同时删除多个用户时，用英文逗号（,）隔开。
+   其中，`user_name` 为待删除用户的用户名，同时删除多个用户时，用户名之间用英文逗号（,）分隔。
 
-删除名为 `sqluser02` 的用户的示例如下：
+   成功删除用户后，该用户所创建的数据库对象不会被删除，但该用户的所有权限会一同被删除。
 
-```sql
-obclient> DROP USER sqluser02;
-Query OK, 0 rows affected
-```
+   删除 `sqluser02` 用户的示例如下：
+
+   ```shell
+   obclient> DROP USER sqluser02;
+   Query OK, 0 rows affected
+   ```
+
+## 相关文档
 
 更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/30.drop-user-of-mysql-mode.md)。
