--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.modify-the-resource-configuration-of-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.modify-the-resource-configuration-of-a-tenant.md
@@ -49,7 +49,7 @@ obclient> CREATE TENANT tenant1 RESOURCE_POOL_LIST = ('pool1');
 
 3. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer。
 
-   向 Zone 内添加 OBServer 的具体操作请参见 [添加 OBServer](../1.manage-clusters/5.manage-observer/1.add-observer.md)。
+   向 Zone 内添加 OBServer 节点的具体操作请参见 [添加节点](../1.manage-clusters/5.manage-observer/1.add-observer.md)。
 
 4. 将资源池 `pool1` 中 `ZONE_LIST` 的范围扩大到 `'z1','z2','z3','z4'`。
 
