--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -39,7 +39,7 @@
    * Zone 级别的转储
 
       可以对指定的一个或多个 Zone 进行转储。
-      
+
       SQL 语句如下：
 
       ```sql
@@ -138,7 +138,7 @@
 
 3. 发起转储后，您可以查看转储进度，具体操作请参见 [查看转储进度](4.view-dump-information.md)。
 
-## 相关阅读
+## 相关文档
 
 * [自动触发转储](../1.dump-management/2.automatically-trigger-dump.md)
 
