--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/2.automatic-merge-triggering.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/2.automatic-merge-triggering.md
@@ -30,7 +30,7 @@
 
 更多`freeze_trigger_percentage` 、`major_compact_trigger` 等转储相关参数的说明及设置请参见 [修改转储配置](../1.dump-management/5.modify-dump-configuration.md)。
 
-## 相关阅读
+## 相关文档
 
 * [定时触发合并](3.scheduled-trigger-merge.md)
 
