--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/3.scheduled-trigger-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/3.scheduled-trigger-merge.md
@@ -48,7 +48,7 @@
       obclient> ALTER SYSTEM SET major_freeze_duty_time='01:00' TENANT=tenant1，tenant2;
       ```
 
-## 相关阅读
+## 相关文档
 
 * [自动触发合并](2.automatic-merge-triggering.md)
 
