--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/2.decrease-observer-node-from-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/2.decrease-observer-node-from-zone.md
@@ -28,11 +28,10 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 2. 执行以下命令，从集群中删除各 Zone 中的 OBServer 节点。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <p>由于当前版本暂不支持调小租户的 <code>UNIT_NUM</code>，该缩容方式仅适用于当前集群中 Unit 数量小于或等于计划删除 OBserver 后的单个 Zone 中的可用 OBserver 数量。例如，本示例中，如果租户 <code>tenant1</code> 的 <code>UNIT_NUM</code> 为 2，则删除各 Zone 中的 OBServer 时会失败。</p>
-  </main>
+   <main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>由于当前版本暂不支持调小租户的 <code>UNIT_NUM</code>，该缩容方式仅适用于当前集群中 Unit 数量小于或等于计划删除 OBserver 节点后的单个 Zone 中的可用 OBserver 数量。例如，本示例中，如果租户 <code>tenant1</code> 的 <code>UNIT_NUM</code> 为 2，则删除各 Zone 中的 OBServer 时会失败。</p>
+   </main>
 
    其中，`xxx.xxx.x.xx1`、`xxx.xxx.x.xx2`、`xxx.xxx.x.xx3` 分别表示待删除的节点的 IP 地址。
 
