--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -114,7 +114,7 @@
 
      更多 `mysql.db` 视图的字段及说明请参见 [mysql.db](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md)。
 
-## 相关阅读
+## 相关文档
 
 用户权限及授权相关操作介绍，请阅读以下内容：
 
