--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/3.view-cleaning-backup-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/3.view-cleaning-backup-progress.md
@@ -85,6 +85,6 @@
 
       从查询结果中可知，目的端 `file:///data/nfs/backup/data` 中数据备份 `backup_set_id=1` 的备份文件已完成清理，且任务完成率为 100%（`FINISH_LS_COUNT/TOTAL_LS_COUNT`）；目的端`file:///data/nfs/backup/archive` 中日志归档 `round_id=1/backup_piece_id=1` 的备份文件正在被清理，且任务完成率为 50%（`FINISH_LS_COUNT/TOTAL_LS_COUNT`），您可以通过 `JOB_ID` 在 JOB 级任务视图中查看清理任务发起的相关信息。
 
-## 相关阅读
+## 相关文档
 
 [查看备份清理结果](4.view-cleaning-backup-history.md)
