--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
@@ -12,7 +12,7 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
 
 该语句仅支持在 `sys` 租户中执行。
 
-示例：
+## 操作步骤
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
