--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/8.delete-a-user-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/8.delete-a-user-of-oracle-mode.md
@@ -1,34 +1,43 @@
 # 删除用户
 
-您可以通过 DROP USER 语句删除不再使用的用户。
+您可以通过 `DROP USER` 语句删除不再使用的用户。
 
-## 通过 SQL 语句删除用户
+## 前提条件
 
-您可以通过 `DROP USER` 语句删除用户。当前用户必须拥有 `DROP USER` 的系统权限，才可以使用 `DROP USER` 命令，查看权限的相关操作请参见 [查看用户权限](../2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有 `DROP USER` 系统权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
+当前用户必须拥有 `DROP USER` 的系统权限，才可以使用 `DROP USER` 命令，查看权限的相关操作请参见 [查看用户权限](../2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有 `DROP USER` 系统权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>删除用户会删除该用户拥有的所有 Object，包括权限、数据库、表等，请谨慎操作。</p>
-  </main>
+## 注意事项
 
-删除用户的 SQL 语句如下：
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>删除用户会删除该用户拥有的所有 Object，包括权限、数据库、表等，请谨慎操作。</p>
+</main>
 
-```sql
-DROP USER username CASCADE;
-```
+## 操作步骤
 
-语句使用说明：
+1. 用户登录集群的 Oracle 租户。
 
-* `CASCADE` 表示在删除用户前，系统会删除该用户拥有的所有 Object，包括权限、数据库、表等。
+2. 执行以下语句，删除用户。
 
-* `username` 表示待删除的用户，仅支持删除单个用户。
+   语句如下：
 
-删除名为 `sqluser` 用户的示例如下：
+   ```sql
+   DROP USER username CASCADE;
+   ```
 
-```sql
-obclient> DROP USER sqluser CASCADE;
-Query OK, 0 rows affected
-```
+   语句使用说明：
+
+   * `CASCADE` 表示在删除用户前，系统会删除该用户拥有的所有 Object，包括权限、数据库、表等。
+
+   * `username` 表示待删除的用户，仅支持删除单个用户。
+
+   删除 `sqluser` 用户的示例如下：
+
+   ```shell
+   obclient> DROP USER sqluser CASCADE;
+   Query OK, 0 rows affected
+   ```
+
+## 相关文档
 
 更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/42.drop-user-of-oracle-mode.md)。
-
