--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 用户创建成功后，您可以根据需要查看用户的权限。
 
-## 通过 SQL 语句查看用户权限
+## 操作步骤
 
 1. 租户管理员登录到数据库。
 
@@ -114,8 +114,7 @@
 
      更多 `mysql.db` 视图的字段及说明请参见 [mysql.db](../../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md)。
 
-
-## 相关阅读
+## 相关文档
 
 用户权限及授权相关操作介绍，请阅读以下内容：
 
