--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 修改用户权限包括授予用户权限和撤销用户权限。
 
-## 通过 SQL 语句授予权限
+## 授予权限
 
 您可以通过 `GRANT` 语句授予用户用户级权限、数据库级权限或对象权限。
 
@@ -139,7 +139,7 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
 
 更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/35.grant-of-mysql-mode.md)。
 
-## 通过 SQL 语句撤销权限
+## 撤销权限
 
 ### 前提条件
 
