--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/2.automatically-trigger-dump.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/2.automatically-trigger-dump.md
@@ -6,7 +6,7 @@
 
 更多配置项 `memstore_limit_percentage` 和 `freeze_trigger_percentage` 的说明及设置方法，请参见 [修改转储配置](../1.dump-management/5.modify-dump-configuration.md)。
 
-## 相关阅读
+## 相关文档
 
 * [手动触发转储](../1.dump-management/3.trigger-dump-manually.md)
 
