--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks.md
@@ -205,10 +205,10 @@ ifconfig
    ssh-keygen -t rsa
    ```
 
-3. 在中控机器上执行以下命令登录目标机器：
+3. 将中控机的公钥复制到目标机器的 authorized_keys 文件中：
 
    ```bash
-   ssh-copy-id  root@<server_ip>
+   ssh-copy-id -i ~/.ssh/id_rsa.pub <user>@<server_ip>
    ```
 
 <!--
@@ -220,19 +220,19 @@ ifconfig
 
 ### （附录）脚本参考
 
-推荐您使用以下脚本,执行以下脚本需要拥有 sudo 权限。
+推荐您使用以下脚本，执行以下脚本需要拥有 sudo 权限。
 
    ```bash
    #!/usr/bin/bash
    
-      SERVERS=("root@172.19.x.x root@172.19.x.x" "root@172.19.x.x" "root@172.19.x.x")
-      PASSWORD="test@"
+      SERVERS=("<user>@<server_ip1>" "<user>@<server_ip2>" "<user>@<server_ip3>")
+      PASSWORD="<password>"
       keygen() {
-      yum -y install expect
+      sudo yum -y install expect
       expect -c "
          spawn ssh-keygen -t rsa
          expect {
-            *(/root/.ssh/id_rsa):* { send -- \r;exp_continue}
+            *(~/.ssh/id_rsa):* { send -- \r;exp_continue}
             *(y/n)* { send -- y\r;exp_continue}
             *Enter* { send -- \r;exp_continue}
             *(y/n)* { send -- y\r;exp_continue}
@@ -266,7 +266,7 @@ ifconfig
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>您必须将脚本中的 <strong>hosts</strong> 列表和 <strong>password</strong> 替换成您自己的实际机器列表和密码。</p>
+    <p>您必须将脚本中的 <strong>SERVERS</strong> 列表和 <strong>PASSWORD</strong> 替换成您自己的实际机器列表和密码。</p>
   </main>
 
 ## 配置时钟源
@@ -297,12 +297,12 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    [root@centos-01 /root]#ntpq -4p
    remote refid st t when poll reach delay offset jitter
    ==============================================================================
-   *time6.aliyun.co 10.137.38.86 2 u 712 1024 377 21.951 4.253 4.208
+   *time6.aliyun.co xxx.xxx.xxx.xxx 2 u 712 1024 377 21.951 4.253 4.208
    ```
 
 3. （可选）开启 NTP 服务端服务。
 
-   如果您已经有了 NTP 服务端服务器，则可跳过此步骤。本文档使用目标机器 `10.244.0.114` 作为 NTP 服务端服务器。
+   如果您已经有了 NTP 服务端服务器，则可跳过此步骤。本文档使用目标机器 `10.10.10.1` 作为 NTP 服务端服务器。
    1. 编辑配置文件。
 
       以 root 用户登录 NTP 服务端服务器，运行以下命令编辑配置文件：
@@ -355,7 +355,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    3. 运行以下命令同步 NTP 服务端时间：
 
       ```bash
-      ntpdate 10.244.0.114
+      ntpdate 10.10.10.1
       ```
 
    4. 编辑配置文件。
@@ -389,7 +389,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    返回以下结果：
 
    ```bash
-   synchronised to NTP server (10.143.0.44) at stratum 3
+   synchronised to NTP server (xxx.xxx.xxx.xxx) at stratum 3
    time correct to within 2 ms
    polling server every 64 s
    ```
@@ -623,6 +623,7 @@ sestatus
 ### ARM 环境部署建议
 
 * bios 及内核参数开启 numa 支持
+
 * 执行以下命令关闭 numa balancing，避免 balance 过程中性能可能发生抖动
 
   ```bash
