--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/2.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/2.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -11,16 +11,16 @@
   安装 OceanBase 数据库的机器。
   
 * OBD
-
-  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。
+<!-- 链接待放 -->
+  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档]()。
   
 * OBProxy
+<!-- 链接待放 -->
+  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBProxy。详细信息请参考 [ODP 文档]()
 
-  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBProxy。
-
-* OCP
+* OCP Express
   
-  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP。
+  基于 Web 的 Oceanbase 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。
   
 ## 前提条件
 
@@ -30,62 +30,107 @@
 
 * 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](../2.local-deployment/2.environment-and-configuration-checks.md)。
 
+* 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](链接待放)。
+
+* 您的机器中已安装 OBClient 客户端，详细信息请参考 [OBClient 文档](链接待放)。
+
 ## 部署模式
 
-本文采用三副本部署模式，推荐使用四台机器，您可以根据自己实际情况选择合适的部署方案。其中：
+本文采用三副本部署模式，推荐使用四台机器，您可以根据自己实际情况选择合适的部署方案。本文中四台机器的使用情况如下：
 
-* 使用一台机器部署 OBProxy、Grafana、Prometheus；如果您已经安装或计划安装OCP，则无需安装 Grafana 和 Prometheus。
+| 角色           | 机器           | 备注                 |
+| OBD            | 10.10.10.4 | 中控机，自动化部署软件    |
+| OBServer 节点  | 10.10.10.1 | OceanBase 数据库 Zone1   |
+| OBServer 节点  | 10.10.10.2 | OceanBase 数据库 Zone2   |
+| OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
+| OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 监控工具   |
+| ODP            | 10.10.10.4 | OceanBase 访问反向代理   |
+| Prometheus     | 10.10.10.4 | 系统监控和告警工具包      |
+| Grafana        | 10.10.10.4 | 数据可视化工具           |
 
-* 使用三台机器部署 OceanBase 集群。
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>
-    <p>在生产环境下，推荐将 OBProxy 和应用部署在一台机器上，以节省应用访问 OBProxy 的时间。您可以在每个应用的服务器上部署一个 OBProxy 服务。在本例中，为了更方便使用，将 OBProxy 单独部署。</p>
-    </li>
-    <li>
-    <p>部署 OBProxy 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 OBProxy 只需 1C/1G  内存即可。
-    </li>
-    </ul>
-  </main>
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <ul>
+  <li>
+  <p>在生产环境下，推荐将 ODP 和应用部署在一台机器上，以 ODP 访问应用的时间。您可以在每个应用的服务器上部署一个 ODP 服务。在本例中，为了更方便介绍，将 ODP 单独部署。</p>
+  </li>
+  <li>
+  <p>部署 ODP 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 ODP 最小只需 1C/1G 内存。
+  </li>
+  </ul>
+</main>
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
   <p>以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。</p>
 </main>
 
-## 下载并安装 all-in-one package
+## 步骤一：（可选）下载并安装 all-in-one 安装包
 
-从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、OBProxy、obagent、Grafana 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
+从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、ODP、OBAgent 等组件的安装。
 
-1. 从 [OceanBase 社区下载中心](https://open.oceanbase.com/softwareCenter/community) 下载最新的 all-in-one package，oceanbase-all-in-one-4.xx.xx-xxx.tar.gz。
+您也可根据实际需求从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 选择部分组件下载安装或者指定组件的版本。
 
-2. 执行以下命令解压安装包并安装。
+### 在线安装
 
-    ``` bash
-    tar -xzf oceanbase-all-in-one-4.xx.xx-xxx.tar.gz
-    cd oceanbase-all-in-one/bin/
-    ./install.sh
-    ```
+若您的机器可以连接网络，可执行如下命令在线安装。
 
-    <main id="notice" type='notice'>
-                <h4>注意</h4>
-                <p>安装完成后需执行 <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> 否则直接执行 <code>which obd</code> 会失败。</p>
-              </main>
+```bash
+[admin@test001 ~]$ bash -c "$(curl -s https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/oceanbase-all-in-one/installer.sh)"
+[admin@test001 ~]$ source ~/.oceanbase-all-in-one/bin/env.sh
+```
 
-3. 执行 `which obd` 和 `which obclient` 检测是否安装成功, 如果可以找到 oceanbase-all-in-one 下的 obd 和 obclient 路径，则表示安装成功。
+### 离线安装
 
-    ```bash
-    [root@test .obd]# which obd
-    /root/.oceanbase-all-in-one/obd/usr/bin/obd
-    [root@test .obd]# which obclient
-    /root/.oceanbase-all-in-one/obclient/u01/obclient/bin/obclient
-    ```
+若您的机器无法连接网络，可参考如下步骤离线安装。
 
-## 安装 OceanBase 数据库
+1. 从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的 all-in-one 安装包，并将其复制到中控机任意目录下。
 
-为了数据安全，建议您切换到非 root 用户。
+2. 在安装包所在目录下执行如下命令解压安装包并安装。
+
+   ```bash
+   [admin@test001 ~]$ tar -xzf oceanbase-all-in-one-*.tar.gz
+   [admin@test001 ~]$ cd oceanbase-all-in-one/bin/
+   [admin@test001 bin]$ ./install.sh
+   [admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
+   ```
+
+## 步骤二：配置 OBD
+
+部署 OceanBase 集群之前，为了数据安全，建议您切换到非 root 用户。
+
+如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包。
+
+如果对部署所需组件版本有特别要求，可从 [OceanBase 社区下载中心](https://www.oceanbase.com/softwarecenter) 自行下载组件对应版本安装包，复制到中控机任一目录，在该目录下参考以下步骤配置 OBD。
+
+如果是在线部署 OceanBase 集群或通过 all-in-one 安装包部署 OceanBase 集群，则跳过步骤 1~3。
+
+1. 禁用远程仓库
+
+   ```bash
+   [admin@test001 rpm]$ obd mirror disable remote
+   ```
+
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>安装 all-in-one 安装包后默认关闭远程仓库，您可通过 <code>obd mirror list</code> 命令进行确认，查看 Type=remote 对应的 Enabled 变成了 False，说明已关闭远程镜像源。</p>
+   </main>
+
+2. 将安装包添加至本地镜像
+
+   ```bash
+   [admin@test001 rpm]$ obd mirror clone *.rpm
+   ```
+
+3. 查看本地镜像中安装包列表
+
+   ```bash
+   [admin@test001 rpm]$ obd mirror list local
+   ```
+
+4. 选择配置文件
+<!-- 写到这里 -->
+
 
 1. 选择配置文件。
 
@@ -118,11 +163,11 @@
         servers:
           - name: z1
             # Please don't use hostname, only IP can be supported
-            ip: 172.xx.xxx.200
+            ip: 10.10.10.1
           - name: z2
-            ip: 172.xx.xxx.201
+            ip: 10.10.10.2
           - name: z3
-            ip: 172.xx.xxx.202
+            ip: 10.10.10.3
         global:
           # Please set devname as the network adaptor's name whose ip is  in the setting of severs.
           # if set severs as "127.0.0.1", please set devname as "lo"
@@ -146,7 +191,7 @@
       ```bash
       obproxy-ce:
         servers:
-          - 172.xx.xxx.203
+          - 10.10.10.4
         global:
           # The working directory for obproxy. Obproxy is started under this directory. This is a required field.
           home_path: /home/admin/obproxy
@@ -342,11 +387,11 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
         servers:
           - name: z1
             # Please don't use hostname, only IP can be supported
-            ip: 172.xx.xxx.200
+            ip: 10.10.10.1
           - name: z2
-            ip: 172.xx.xxx.201
+            ip: 10.10.10.2
           - name: z3
-            ip: 172.xx.xxx.202
+            ip: 10.10.10.3
         global:
           # Please set devname as the network adaptor's name whose ip is  in the setting of severs.
           # if set severs as "127.0.0.1", please set devname as "lo"
@@ -370,7 +415,7 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
       ```bash
       obproxy-ce:
         servers:
-          - 172.xx.xxx.203
+          - 10.10.10.4
         global:
           # The working directory for obproxy. Obproxy is started under this directory. This is a required field.
           home_path: /home/admin/obproxy
