--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -22,7 +22,7 @@
       ERROR 1227 (42501): Access denied; you need (at least one of) the GRANT privilege(s) for this operation
       ```
 
-      <main id="notice" type='alert'>
+      <main id="notice" type='notice'>
          <h4>注意</h4>
          <p>为用户授权时不带这 <code>with grant option</code> 参数，则它的权限不可以传递授予其它用户</p>
       </main>
