--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
@@ -160,7 +160,7 @@
 
    <main id="notice" type='explain'>
    <h4>说明</h4>
-   <p>默认 MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</p>
+   <p>默认 MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
    连接示例如下，连接数据库时请以实际环境为准。
