--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/12.full-link-detection/3.full-link-diagnosis.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/12.full-link-detection/3.full-link-diagnosis.md
@@ -1,6 +1,6 @@
-# 全链路诊断方法
+# 全链路追踪方法
 
-运维人员可根据需要，通过使用 PL/SQL 程序包 DBMS_MONITOR 中相关方法，控制相关应用程序不同标识信息维度是否开启全链路诊断 trace，以及该 trace 的打点和相关信息打印到 trace 日志的策略。日志打印会根据采样频率判断是否会被采样并记录到内存中，有一定的概率打印到 trace 日志中。
+运维人员可根据需要，通过使用 PL/SQL 程序包 DBMS_MONITOR 中相关方法，控制相关应用程序不同标识信息维度是否开启全链路追踪 trace，以及该 trace 的打点和相关信息打印到 trace 日志的策略。日志打印会根据采样频率判断是否会被采样并记录到内存中，有一定的概率打印到 trace 日志中。
 
 ## trace 打开和关闭操作
 
@@ -167,4 +167,4 @@
 [20xx-0x-xx 00:07:46.027234] [1751][T1_TNT_L0][T1][YB42AC12050D-0005E42565DA44B2-0-0] {"trace_id":"0005e495-f920-5adc-7cd1-3730afa11dbd","name":"pc_get_plan","id":"0005e426-5aac-d38c-0000-000000000004","start_ts":1658707664460552,"end_ts":1658707664460660,"parent_id":"0005e426-a22f-6cd4-0000-000000000003","is_follow":false}
 ```
 
-更多全链路诊断的内容，请参见 [查询链路](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775814)。
+更多全链路追踪的内容，请参见 [查询链路](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775814)。
