修订评审意见

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/4.trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/4.trigger-of-oracle-mode.md
@@ -30,7 +30,7 @@ OceanBase 数据库可以创建以下几种类型触发器：
 
 * 组合 DML 触发器
 
-  组合 DML 触发器可以创建于表或可编辑视图上，支持在多个时间点触发。组合触发器按照每个时间点分隔成段，每个时间段都包含独立的可执行部分和异常处理部分（可选的）。
+  组合 DML 触发器可以创建于表或视图上，支持在多个时间点触发。组合触发器按照每个时间点分隔成段，每个时间段都包含独立的可执行部分和异常处理部分（可选的）。
 
 ## 触发器的触发时机 
 
