--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
@@ -33,7 +33,7 @@ OceanBase 数据库 MySQL 模式当前主要支持以下类型的触发器：
 ```sql
 CREATE
     [DEFINER = user]
-    TRIGGER [IF NOT EXISTS] trigger_name
+    TRIGGER trigger_name
     trigger_time trigger_event
     ON table_name FOR EACH ROW
     trigger_body
